[build-system]
requires = ["hatchling", "hatch-vcs"] 
build-backend = "hatchling.build"

[project]
name = "tgzr.package_management"
dynamic = ["version"]
description = 'tgzr package_management engine'
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
keywords = []
authors = [
  { name = "Dee", email = "dee.sometech@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "uv",
  "hatch",
  "importlib-metadata", # needed to support modern Distribution api with py3.9
]


[project.urls]
Documentation = "https://github.com/open-tgzr/tgzr.package_management#readme"
Issues = "https://github.com/open-tgzr/tgzr.package_management/issues"
Source = "https://github.com/open-tgzr/tgzr.package_management"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "./src/tgzr/package_management/_version.py"

[tool.hatch.build]
# this is needed bc it is otherwise not included in the build:
artifacts = ['_version.py']
packages = ["src/tgzr"]

[tool.hatch.build.targets.wheel]
# this is needed bc it is otherwise not included in the build:
artifacts = ['_version.py']
packages = ["src/tgzr"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/tgzr/package_management tests}"

[tool.coverage.run]
source_pkgs = ["tgzr.package_management", "tests"]
branch = true
parallel = true
omit = [
  "src/tgzr/package_management/_version.py",
]

[tool.coverage.paths]
tgzr.package_management = ["src/tgzr/package_management", "*/tgzr.package_management/src/tgzr/package_management"]
tests = ["tests", "*/tgzr/package_management/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]


